# grido

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/grido-app/: Cargo.toml
crates/grido-app/src/: main.rs
crates/grido-core/: Cargo.toml
crates/grido-core/src/: cell_value.rs  column.rs  document.rs  edit.rs  error.rs  lib.rs  search.rs
crates/grido-formula/: Cargo.toml
crates/grido-formula/src/: lib.rs
crates/grido-grid/: Cargo.toml
crates/grido-grid/src/: grid_view.rs  lib.rs  selection.rs  viewport.rs
crates/grido-io/: Cargo.toml
crates/grido-io/src/: csv.rs  detect.rs  error.rs  json.rs  lib.rs
tests/fixtures/: test.csv  test.json  test.tsv
