[workspace]
members = [
    "crates/grido-app",
    "crates/grido-core",
    "crates/grido-grid",
    "crates/grido-io",
    "crates/grido-formula",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-segmentation = "1.11"

# V1+
# parquet = "53"
# arrow = "53"
# calamine = "0.26"

# dev
criterion = { version = "0.5", features = ["html_reports"] }
